--- a/src/com/stockops/UI/EquityMarket/BrokerageModeratorJPanel.form
+++ b/src/com/stockops/UI/EquityMarket/BrokerageModeratorJPanel.form
@@ -21,7 +21,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" pref="1017" max="32767" attributes="0"/>
+          <Component id="jPanel1" pref="1034" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
               <EmptySpace min="140" pref="140" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -210,6 +210,9 @@
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="30" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Brokerage Moderator"/>
           </Properties>
