--- a/src/com/stockops/UI/MainJFrame.form
+++ b/src/com/stockops/UI/MainJFrame.form
@@ -477,6 +477,11 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel24">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="2" name="/Users/mridulregmi/Desktop/AED-Final-Project/images/stock.png"/>
+                    </Property>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
